fix: format durations and byte sizes with Locale.ROOT
String.formatted uses the JVM default locale, so German machines
show 0,1 / 1,5 KB and fail MessageTextTest and StoreSummaryTest.

Co-authored-by: jakob.ausserer.tz <jakob.ausserer.tz@gmail.com>